fix: align production URLs and deploy compatibility