@@ -2,6 +2,8 @@ package com.example.getoffer.service.ai;
 
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadFactory;
+import java.util.concurrent.atomic.AtomicInteger;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -9,8 +11,15 @@ import org.springframework.context.annotation.Configuration;
 @Configuration
 public class AiExecutorConfig {
 
-    @Bean(destroyMethod = "close")
+    @Bean(destroyMethod = "shutdown")
     public ExecutorService aiExecutorService() {
-        return Executors.newVirtualThreadPerTaskExecutor();
+        AtomicInteger threadCounter = new AtomicInteger(1);
+        ThreadFactory threadFactory = runnable -> {
+            Thread thread = new Thread(runnable);
+            thread.setName("ai-exec-" + threadCounter.getAndIncrement());
+            thread.setDaemon(true);
+            return thread;
+        };
+        return Executors.newCachedThreadPool(threadFactory);
     }
 }
